<resources>
    <string name="app_name">ActionbarTest</string>
    <string name="action_settings">设置</string>
    <string name="clothing_item">衣</string>
    <string name="food_item">食</string>
    <string name="living_item">住</string>
    <string name="traffic_item">行</string>
    <string name="date">时间</string>

    <string name="home_button">HomeButton</string>
    <string name="take_photo">TakePhoto</string>
    <string name="acount_button">Acount</string>
    <string name="save">确定</string>
    <string name="edit">编辑</string>

    <string name="please_input_ptice">"      0"</string>
    <string name="only_number_and_.">1234567890.</string>
    <string name="please_input_happiness">请输入幸福度</string>
    <string name="please_input_lable">请输入标签</string>
    <string name="please_input_detail">请输入备注</string>

    <string name="ptr_pull_to_refresh">Pull to refresh</string>
    <string name="ptr_release_to_refresh">Release to refresh</string>
    <string name="ptr_refreshing">Refreshing…</string>
    <string name="ptr_last_updated">Updated: %1$s</string>
</resources>
