<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <EditText
            android:id="@+id/lable_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_input_lable" />
        <EditText
            android:id="@+id/happiness_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_input_happiness" />
        <EditText
            android:id="@+id/detail_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_input_detail" /></LinearLayout>


</ScrollView>