<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="@drawable/background">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_goods_edit"
        android:layout_width="fill_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme"/>

    <ImageView
        android:id="@+id/goods_picture"
        android:layout_width="150dp"
        android:adjustViewBounds="true"
        android:layout_height="150dp"
        android:contentDescription="@string/save"
        android:scaleType="centerInside"
        android:layout_below="@+id/toolbar_goods_edit"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/price_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:digits="@string/only_number_and_."
        android:gravity="right"
        android:textSize="50dp"
        android:hint="@string/please_input_ptice"
        android:layout_alignBottom="@+id/goods_picture"
        android:layout_alignParentEnd="true" />

    <include layout="@layout/label_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:id="@+id/include" />
    <include layout="@layout/happiness_imagebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/include2"
        android:layout_below="@+id/include"
        android:layout_centerHorizontal="true" />
    <EditText
        android:id="@+id/detail_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/please_input_detail"
        android:layout_below="@+id/include2"
        android:layout_alignParentStart="true" />

</RelativeLayout>