<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/goods_picture"
                android:layout_width="150dp"
                android:adjustViewBounds="true"
                android:layout_height="150dp"
                android:contentDescription="@string/save"
                android:scaleType="centerInside"
                android:layout_marginTop="39dp"
                android:layout_marginStart="39dp" />

            <EditText
                android:id="@+id/price_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:digits="@string/only_number_and_."
                android:gravity="right"
                android:textSize="50dp"
                android:hint="@string/please_input_ptice"
                android:layout_marginStart="42dp"
                android:layout_gravity="bottom" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <include layout="@layout/label_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:id="@+id/include" />
            <include layout="@layout/happiness_imagebutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/include2" />
            <EditText
                android:id="@+id/detail_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/please_input_detail" />
            <Button
                android:id="@+id/save_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/detail_edit"
                android:layout_alignParentStart="true" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>